--- a/src/cv/CV-2025.md
+++ b/src/cv/CV-2025.md
@@ -1,20 +1,21 @@
 # Jupiter Tecson
-**Staff Software Engineer | Technical Lead | Platform & Distributed Systems**
+**Staff Software Engineer | Technical Lead | Backend & Full Cycle Development**
 London, United Kingdom | +44 7565 900947 | jobs@walkingjupiter.com
 [LinkedIn](https://linkedin.com/in/workingjupiter) | [Portfolio](https://walkingjupiter.com) | [Blog](https://blog.jupitergoals.com)
 
 ### PROFESSIONAL SUMMARY
-**16+ years of experience** building and scaling distributed systems across FinTech, E-commerce, and Healthcare sectors. Currently operating at a Staff Engineering level at Tesco, focusing on **Platform Engineering** and Internal Developer Platforms (IDP) to streamline workflows for thousands of engineers.
+**16+ years of experience** building and scaling distributed systems across **E-commerce, AdTech, CRM, and Healthcare sectors**. A proven Technical Lead who has operated at **Staff/Principal levels** in Japan and Singapore, driving technical strategy and migrating monolithic legacy systems to cloud-native microservices (AWS/Azure).
 
-Former Technical Lead in Japan and Singapore with deep expertise in migrating monolithic legacy systems to cloud-native microservices (AWS/Azure). A "Force Multiplier" engineer who combines technical depth in **Java** and **Golang** with a focus on Developer Experience (DevX). Actively building **JupiterGoals**, an AI-powered LifeOS, demonstrating advanced R&D in LLM agents and goal-decomposition architectures.
+A hands-on technical leader who combines deep expertise in **Java** with a strategic focus on Developer Experience (DevX) and Platform Engineering. Currently delivering impact at Tesco while actively building **JupiterGoals**, an AI-powered LifeOS, demonstrating advanced R&D in LLM agents and goal-decomposition architectures.
 
 ---
 
 ### TECHNICAL SKILLS
-* **Core Languages:** Java (Expert - 16+ years), Golang (Current Focus), TypeScript, JavaScript, SQL, Bash.
-* **Platform & DevOps:** Internal Developer Platforms (IDP), Azure DevOps, Terraform, AWS (ECS/Lambda), Azure (AKS), Kubernetes, Docker, CI/CD Strategy.
-* **Backend Architecture:** Spring Boot Ecosystem, Microservices, Multi-tenancy patterns, Event-Driven Architecture (Kafka), CQRS.
-* **AI & R&D:** LLM Agents, Vector Embeddings, Goal Decomposition Models.
+* **Backend (Expert):** Java (16+ years), Spring Boot, Micronaut,  Microservices, Event-Driven Architecture (Kafka), CQRS, SQL (PostgreSQL/MySQL), System Design.
+* **Platform Languages:** Golang (Professional experience in Cloud/K8s/Azure SDKs context), HCL (Terraform), Shell (Bash/Zsh)
+* **Frontend (Proficient):** TypeScript, JavaScript, React, GraphQL, SPA Architecture, Next.js.
+* **Platform & Infra:** AWS (ECS/Fargate), Azure (AKS), Kubernetes, Terraform, Docker, CI/CD Strategy (Azure DevOps).
+* **Emerging Tech:** vLLM, RAG, Vector Embeddings, Model Fine Tuning, AI Agents (R&D focus).
 
 ---
 
@@ -22,66 +23,68 @@ Former Technical Lead in Japan and Singapore with deep expertise in migrating mo
 
 **TESCO** | London, UK
 **Software Development Engineer III** | *May 2023 – Present*
+*Delivering Staff-level impact within the Platform Engineering and Recommendations domains.*
 
-*Current Focus: Internal Developer Platform (IDP)*
-* **Platform Engineering:** Building a secure, multi-tenant Internal Developer Platform using **Golang** and **Terraform** to standardize and accelerate infrastructure provisioning for Tesco engineers.
-* **DevOps Integration:** Architected robust integrations with **Azure DevOps**, enabling seamless CI/CD pipeline generation and management directly from the platform.
-* **Developer Experience (DevX):** Championed the UX of the platform by leading design discussions and creating high-impact technical demos/documentation that successfully aligned stakeholders and drove adoption.
+*Current Project: Tesco Developer Platform (TDP)*
+* **Platform Engineering:** Building a secure, multi-tenant Developer Platform. Adopting **Golang** to create CLI tools and Kubernetes components that standardize infrastructure provisioning.
+* **DevOps Integration:** Architected robust integrations with **Azure DevOps**, enabling application teams to generate compliant CI/CD pipelines automatically via **Terraform**.
+* **Developer Experience (DevX):** Championed the UX of the platform by leading design discussions and creating high-impact technical demos that successfully aligned stakeholders and drove internal adoption.
 
-*Previous Focus: Recommendations, Substitutions & Lists*
-* **Cloud Cost Optimization:** Identified inefficiencies in cloud resource usage; executed a migration strategy (AWS to Azure) that delivered **£440,000 annual savings**.
+*Previous Project: Recommendations, Substitutions & Lists*
+* **Cloud Cost Optimization:** Identified inefficiencies in backend resource usage and executed a migration strategy (AWS to Azure) that delivered **£440,000 annual savings**.
 * **Event-Driven Architecture:** Drove the technical initiative to enable real-time collaborative ordering using **Kafka**, ensuring instant synchronization across user devices.
 * **Technical Modernization:** Spearheaded the adoption of **Java 21** and Virtual Threads to improve the throughput of high-traffic backend services.
 * **Infrastructure:** Led the implementation of "Pipeline-as-Code," standardizing CI/CD templates that reduced release timings by **25%**.
 
 **APERZA INC.** | Yokohama, Japan
-**Technical Lead / Software Engineer** | *Nov 2017 – Oct 2022*
-*Led full-stack development (Backend/Frontend/Infra) for a B2B manufacturing marketplace.*
+**Technical Lead (Staff Equivalent)** | *Nov 2017 – Oct 2022*
+*Led End-to-End (Full Stack) development through multiple strategic product pivots.*
 
-* **Infrastructure Migration:** Migrated legacy infrastructure from EC2 to **AWS ECS (Fargate)**, improving scalability and reducing infrastructure costs by **£24,000 annually**.
+* **Product Evolution:** Architected the backend (**Java**) and frontend (**React/TS**) for three distinct business phases:
+    1.  **E-commerce Marketplace:** A B2B platform selling industrial sensors.
+    2.  **Vertical SaaS (CRM):** A marketing and customer management tool for manufacturers.
+    3.  **Aperza TV (Streaming):** A media platform enabling manufacturers to host online events.
+* **Frontend Modernization:** Led the transition from legacy server-side rendering to modern Single Page Applications (SPA), establishing frontend coding standards and component libraries.
+* **Infrastructure Migration:** Migrated legacy infrastructure to **AWS ECS (Fargate)**, improving scalability and reducing costs by **£24,000 annually**.
 * **DevOps Transformation:** Designed the company’s first automated CI/CD pipelines, reducing release cycles from **4 hours to 15 minutes**.
-* **Greenfield Development:** Built the "Vertical SaaS" (CRM-Mail Marketing) and "Aperza TV" (streaming service) platforms from concept to launch.
-* **Agile Implementation:** Transformed the engineering culture by introducing Scrum and TDD, significantly increasing velocity and code quality.
 
-**SABBATICAL** | *May 2016 – Oct 2017*
+**CAREER BREAK** | *May 2016 – Oct 2017*
 * *Global travel across Asia and Europe (Nepal, Vietnam, India, etc.).*
+* Embarked on a global journey, experiencing diverse cultures and expanding personal horizons before relocating to Japan.
 
 **RAKUTEN ASIA** | Singapore
 **Technical Lead / Applications Engineer** | *May 2013 – Apr 2016*
-* **Global Platform:** Developed the Global Advertising Platform from the ground up to serve Asia, Europe, and LatAm markets.
+* **Global Platform:** Developed the Global Advertising Platform from the ground up to serve Asia, Europe, and LatAm markets using **Java**.
 * **Team Leadership:** Managed a distributed team of 8 (Singapore/India), introducing XP/Agile practices that improved project delivery speed by **30%**.
 
 **NCS PTE LTD** | Singapore
 **Application Consultant** | *Mar 2011 – Apr 2013*
 * **Standard Chartered Bank:** Led API development for the "Straight2Bank" Trade Finance module, improving transaction processing efficiency by **15%**.
-* **John Wiley & Sons:** Developed "Access Control" admin tools using Extreme Programming (XP) methodologies.
 
 **ST. LUKE’S MEDICAL CENTER** | Quezon City, Philippines
 **Team Lead / Java Programmer** | *May 2009 – Feb 2011*
 * **Healthcare Report System (HCR):** Architected a centralized reporting engine abstracting complex JMS/ActiveMQ queuing.
-* **Meta-Programming Framework (GFMS):** Designed a **Generic File Maintenance System** using Java Reflection to automate CRUD module creation.
-* **Middleware (ARMS):** Built the HL7 Interface Middleware to integrate diagnostic machine results.
+* **Meta-Programming Framework:** Designed a Generic File Maintenance System using **Java Reflection** to automate CRUD module creation.
 * **Leadership:** Championed TDD adoption across 30 engineers, reducing bug counts by **30%**.
 
 **PROV INTERNATIONAL** | Makati City, Philippines
 **Java Developer** | *Jan 2008 – Apr 2009*
 * **Inventory System:** Lead architect for a forecasting module to predict stock needs.
-* **ABS-CBN:** Refactored the Integrated Payroll System for the Philippines' largest broadcaster.
 
 ---
 
-### PROJECTS & R&D
-* **JupiterGoals (AI LifeOS):** Founder and Architect of **[jupitergoals.com](https://jupitergoals.com)**, an AI-powered Life Operating System.
-    * Engineered a **Goal Decomposition Engine** using LLMs to break down high-level user intent into actionable milestones and tasks.
-    * Building an **Autonomous Agent** that monitors the codebase and independently authors "Building in Public" technical blogs (published at **[blog.jupitergoals.com](https://blog.jupitergoals.com)**) to document the engineering journey.
-* **ReadySetMarry:** Founder/Architect of a wedding planning platform built on React, Node, and Cloud-native infrastructure.
-* **Open Source:** Contributor to **Spring Framework**, **KEDA** (Kubernetes Event-driven Autoscaling), and **NextAuth**.
+### PROJECTS & APPLIED AI
+* **JupiterGoals (AI LifeOS):** Founder and Architect of **[jupitergoals.com](https://jupitergoals.com)**.
+    * Engineered a **Goal Decomposition Engine** using LLMs to break down high-level user intent into actionable milestones.
+    * Building an **Autonomous Agent** that monitors the codebase and independently authors "Building in Public" technical blogs (published at **[blog.jupitergoals.com](https://blog.jupitergoals.com)**).
+* **ReadySetMarry:** Founder/Architect of a wedding planning platform built on **React and Node.js**. ([www.readysetmarry.com](https://www.readysetmarry.com)) - Demo upon request
+* **Open Source:** Contributor to **Spring Framework**, **KEDA**, and **NextAuth** (Kubernetes Event-driven Autoscaling).
 
 ---
 
 ### EDUCATION
 **Bachelor of Science in Computer Science**
-Informatics International College, Philippines | *Mar 2004 – May 2007*
+Informatics International College, Philippines | *2007*
 
 ---
 
