feat: added link to my blog in Aperza

--- a/src/cv/CV-2025.md
+++ b/src/cv/CV-2025.md
@@ -37,7 +37,7 @@ A hands-on technical leader who combines deep expertise in **Java** with a strat
 * **Infrastructure:** Led the implementation of "Pipeline-as-Code," standardizing CI/CD templates that reduced release timings by **25%**.
 
 **APERZA INC.** | Yokohama, Japan
-**Technical Lead (Staff Equivalent)** | *Nov 2017 – Oct 2022*
+**Technical Lead** | *Nov 2017 – Oct 2022*
 *Led End-to-End (Full Stack) development through multiple strategic product pivots.*
 
 * **Product Evolution:** Architected the backend (**Java**) and frontend (**React/TS**) for three distinct business phases:
