feat: updated labels for team lead in prov

--- a/src/cv/CV_2015.doc.md
+++ b/src/cv/CV_2015.doc.md
@@ -170,7 +170,7 @@ and Hibernate Mappings are annotation-based and Criteria API is used over HQL, J
 ***St. Luke’s Medical Center*** **» Healthcare System** is the former system to replace the legacy Healthcare System.  
 **Achievements**
 
-* Appointed as one of the 5 tech leads for modularizing the Legacy Project.  
+* Appointed as one of the 5 team leads for modularizing the Legacy Project.  
 * Provided core processes/frameworks in order to abstract redundant details to the developers and promote code-reuse.  
 * Proposed and taken action to introduce better technologies (SCM, Unit Testing) for the project, of course going through the process.  
 * Deployed to Production. Later replaced by the new Healthcare (*see Healthcare System under St. Luke’s Medical Center*)
